[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Game Screen/back_active.png" type="Texture" id=1]
[ext_resource path="res://assets_new/game_screen/gamescreen3.png" type="Texture" id=2]
[ext_resource path="res://assets/Game Screen/back_inactive.png" type="Texture" id=3]
[ext_resource path="res://assets_new/view_score/pink_blue_spotlight.png" type="Texture" id=4]
[ext_resource path="res://main_menu/scripts/scoreboard.gd" type="Script" id=5]
[ext_resource path="res://assets_new/game_screen/gamescreen2.png" type="Texture" id=6]
[ext_resource path="res://assets_new/game_screen/gamescreen6.png" type="Texture" id=7]
[ext_resource path="res://assets_new/game_screen/gamescreen1.png" type="Texture" id=8]
[ext_resource path="res://assets_new/game_screen/gamescreen5.png" type="Texture" id=9]
[ext_resource path="res://assets_new/game_screen/gamescreen4.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="Scoreboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="bg" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 5
playing = true
centered = false

[node name="spotlights" type="TextureRect" parent="."]
margin_left = -764.0
margin_top = -73.0
margin_right = 2042.0
margin_bottom = 1069.0
texture = ExtResource( 4 )

[node name="back" type="TextureButton" parent="."]
margin_left = 565.0
margin_top = 622.0
margin_right = 722.0
margin_bottom = 684.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="."]
margin_left = 484.0
margin_top = 155.0
margin_right = 584.0
margin_bottom = 180.0
rect_scale = Vector2( 3, 3 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "jkjkh"

[node name="Score2" type="Label" parent="."]
margin_left = 484.0
margin_top = 255.0
margin_right = 584.0
margin_bottom = 280.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "rwr"

[node name="Score3" type="Label" parent="."]
margin_left = 484.0
margin_top = 355.0
margin_right = 584.0
margin_bottom = 380.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "eew"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
